# ai-content-moderation-edge-case-eval-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
configs/: eval_config.yaml  handoff_policy.yaml
docs/: CONTRIBUTING.md  DECISIONS.md  HANDOFF_ANALYSIS.md  METHODOLOGY.md  ROADMAP.md  RUBRIC_SPEC.md
github/workflows/: ci.yml
outputs/: sample_eval_report.json  sample_eval_report.md
policies/: rednote.yaml  schema.json  tiktok.yaml
rubrics/: custom_example.yaml  default.yaml
scripts/: compare_platforms.py  compare_providers.py  generate_report.py  run_eval.py  validate_suites.py
src/: __init__.py  eval_runner.py
src/providers/: __init__.py  base.py  llm_judge.py  openai_mod.py  perspective.py
src/reporting/: __init__.py  report_generator.py
src/reporting/templates/: eval_report.md.j2
src/scoring/: __init__.py  agreement.py  metrics.py  rubric.py
src/taxonomy/: __init__.py  category_registry.py  severity.py
src/utils/: __init__.py  logging.py  retry.py
test_suites/: README.md  schema.json
test_suites/baselines/: clear_violations.jsonl
test_suites/cross_platform/: same_content_diff_policy.jsonl
test_suites/edge_cases/: ai_generated_self_reference.jsonl  coded_language.jsonl  cultural_context_zh_en.jsonl  metaphorical_violence.jsonl  minors_safety_boundary.jsonl  news_reporting_vs_glorification.jsonl  reclaimed_slurs.jsonl  sarcasm_vs_hate.jsonl
test_suites/platform_specific/rednote/: daigou_gray_zone.jsonl  medical_beauty.jsonl  zhongcao_vs_ad.jsonl
test_suites/platform_specific/tiktok/: audio_meme.jsonl  creator_fund_spam.jsonl  duet_context.jsonl
tests/: conftest.py  test_eval_runner.py  test_providers.py  test_scoring.py  test_taxonomy.py  test_utils.py
