[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-content-moderation-eval"
version = "0.2.0"
description = "AI Content Moderation Edge-Case Evaluation Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yingshi Liu"}
]
keywords = ["ai", "moderation", "evaluation", "content-safety", "trust-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0.0",
    "numpy>=1.24.0",
    "anthropic>=0.25.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
modeval = "scripts.run_eval:main"
modeval-compare = "scripts.compare_providers:main"
modeval-platforms = "scripts.compare_platforms:main"
modeval-report = "scripts.generate_report:main"

[project.urls]
Homepage = "https://github.com/yingshill/ai-content-moderation-edge-case-eval-framework"
Repository = "https://github.com/yingshill/ai-content-moderation-edge-case-eval-framework"
Issues = "https://github.com/yingshill/ai-content-moderation-edge-case-eval-framework/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
